...
            Form {
                Section("Book Cover") {
                    ImageField(image: $viewModel.cover)
                }
                
                Section("BOOK DETAILS") {
                    TextField("Title", text: $viewModel.title)
                    TextField("Author", text: $viewModel.author)
                    
//                    TextField("Year", text: Binding(
//                        get: { viewModel.year.map(String.init) ?? "" },
//                        set: { viewModel.year = Int($0) }
//                    ))
...
                        .frame(height: 100)
                }
            }
            .navigationTitle(viewModel.title.isEmpty ? "Add a new book" : "Edit book")
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button("Save") {
                        viewModel.save()
//                        if let cover {
//                            let newImage = UploadedImage(
//                                imageName: "image for \(viewModel.title)",
//                                imageData: cover.jpegData(compressionQuality: 0.8)
//                            )
...
