...
                .navigationBarItems(
    //                leading: EditButton(),
                    leading: Button(action: {isFilteringPresented = true}) {
                        // Content of the button
                        Image(systemName: "line.horizontal.3.decrease.circle")
                    },
                    trailing: Button("Add", action: {
                        newBook = PersistentBook()
                        showEditView.toggle()
                    })
                )
                .sheet(isPresented: $showEditView) {
                    AddEditBookView(modelContext: modelContext)
...
